@@ -69,8 +69,21 @@ public class DatanodeDescriptor extends DatanodeInfo {
    * @param nodeID id of the data node
    * @param networkLocation location of the data node in network
    */
-  public DatanodeDescriptor( DatanodeID nodeID, String networkLocation ) {
-    this( nodeID, networkLocation, 0L, 0L, 0 );
+  public DatanodeDescriptor( DatanodeID nodeID, 
+                             String networkLocation ) {
+    this( nodeID, networkLocation, null );
+  }
+  
+  /** DatanodeDescriptor constructor
+   * 
+   * @param nodeID id of the data node
+   * @param networkLocation location of the data node in network
+   * @param hostName it could be different from host specified for DatanodeID
+   */
+  public DatanodeDescriptor( DatanodeID nodeID, 
+                             String networkLocation,
+                             String hostName ) {
+    this( nodeID, networkLocation, hostName, 0L, 0L, 0 );
   }
   
   /** DatanodeDescriptor constructor
@@ -99,10 +112,11 @@ public class DatanodeDescriptor extends DatanodeInfo {
    */
   public DatanodeDescriptor( DatanodeID nodeID,
                               String networkLocation,
+                              String hostName,
                               long capacity, 
                               long remaining,
                               int xceiverCount ) {
-    super( nodeID, networkLocation );
+    super( nodeID, networkLocation, hostName );
     updateHeartbeat( capacity, remaining, xceiverCount);
     initWorkLists();
   }
