@@ -33,8 +33,7 @@
     DFSClient dfs = new DFSClient(jspHelper.nameNodeAddr, jspHelper.conf);
     UTF8 target = new UTF8(dir);
     if( !dfs.isDirectory(target) ) { // a file
-      LocatedBlock[] blocks = dfs.namenode.open(
-          DNS.getDefaultHost("default"), dir);
+      LocatedBlock[] blocks = dfs.namenode.open(dir);
       DatanodeInfo [] locations = blocks[0].getLocations();
       if (locations.length == 0) {
         out.print("Empty file");
@@ -88,8 +87,7 @@
       //Get the location of the first block of the file
       if (files[i].getPath().endsWith(".crc")) continue;
       if (!files[i].isDir()) {
-        LocatedBlock[] blocks = dfs.namenode.open(
-            DNS.getDefaultHost("default"), files[i].getPath());
+        LocatedBlock[] blocks = dfs.namenode.open(files[i].getPath());
 
         DatanodeInfo [] locations = blocks[0].getLocations();
         if (locations.length == 0) {
